--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,20 +12,12 @@
 	<version>1.0</version>
 	<name>tutorial-backend</name>
 	<description>Tutorial Backend Web Application</description>
-
+	<packaging>jar</packaging>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 
 	<dependencies>
-
-		<!-- Swagger-->
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.0.2</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -62,6 +54,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>tutorial-backend</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
