--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 spring.mvc.view.prefix=/public/
 spring.mvc.view.suffix=.html
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tutorial?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=123456
+# spring.datasource.url=jdbc:mysql://localhost:3306/tutorial?useSSL=false
+# spring.datasource.username=root
+# spring.datasource.password=123456
+spring.datasource.initialization-mode=always
+spring.datasource.platform=${DB_TYPE}
+spring.datasource.url=jdbc:${DB_TYPE}://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.continueOnError=true
+spring.batch.initializer.enabled=false
 
 server.port=8080
